--- a/Bike_Sharing_Demand_MHAhn_v0.14.ipynb
+++ b/Bike_Sharing_Demand_MHAhn_v0.14.ipynb
@@ -19,7 +19,6 @@
     "import numpy as np\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib as mpl\n",
     "import seaborn as sns\n",
     "import missingno as msno\n",
     "\n",
@@ -7344,17 +7343,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcasual = np.expm1(plogcasual)\n",
-    "rpcasual = np.round(pcasual)\n",
-    "tpcasual = np.trunc(pcasual)\n",
-    "\n",
-    "pregistered = np.expm1(plogregistered)\n",
-    "rpregistered = np.round(pcasual)\n",
-    "tpregistered = np.trunc(pregistered)\n",
-    "\n",
-    "pcount = pcasual + pregistered\n",
-    "rpcount = rpcasual + rpregistered\n",
-    "tpcount = tpcasual + tpregistered"
+    "casual = np.expm1(plogcasual)\n",
+    "registered = np.expm1(plogregistered)\n",
+    "count = casual + registered"
    ]
   },
   {
@@ -7570,7 +7561,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "7987c57931f2365761dc2a5f85e647decf73af6edff0c78918b92bfe7c5512ba"
+   "hash": "ab346aeb941d3eb22c315bdddbcd7a9399296d9e3feea520812b7600ca0cd9c8"
   },
   "kernelspec": {
    "display_name": "Python 3.8.10 32-bit",
